[EUDIW-1227] Adds verification data in AuthenticationRequestScreen.
- Replaced some icons with provided assets by the DS.
- Changed AuthenticationInteractor.kt to emit different fake data.
- Added AuthenticationRequestDataUi Sealed Interface to model all the possible view types for the Authentication Request Screen.
- Changed the AuthenticationRequestScreen to draw its content in a more flexible and dynamic way.
- Added AuthenticationRequestTransformer object to add the main content of the AuthenticationRequestScreen.
- Added two new colors in ThemeColors, for Warning and Info.
- Added a reusable WrapExpandableCard.

--- a/resources-logic/src/main/res/drawable/ic_warning.xml
+++ b/resources-logic/src/main/res/drawable/ic_warning.xml
@@ -22,9 +22,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="@android:color/white"
-        android:pathData="M12,19m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0" />
-    <path
-        android:fillColor="@android:color/white"
-        android:pathData="M10,3h4v12h-4z" />
+        android:fillColor="#004494"
+        android:pathData="M12,23a2.168,2.168 0,0 1,-0.837 -0.165,2.464 2.464,0 0,1 -0.727,-0.466l-8.805,-8.806a2.464,2.464 0,0 1,-0.466 -0.727A2.167,2.167 0,0 1,1 12a2.269,2.269 0,0 1,0.165 -0.85,2.1 2.1,0 0,1 0.466,-0.713l8.805,-8.805a2.055,2.055 0,0 1,0.727 -0.48A2.339,2.339 0,0 1,12 1a2.451,2.451 0,0 1,0.85 0.151,1.792 1.792,0 0,1 0.713,0.48l8.805,8.805a1.793,1.793 0,0 1,0.48 0.713A2.451,2.451 0,0 1,23 12a2.34,2.34 0,0 1,-0.151 0.837,2.055 2.055,0 0,1 -0.48,0.727l-8.805,8.806a2.1,2.1 0,0 1,-0.713 0.466A2.271,2.271 0,0 1,12 23ZM10.9,13.1L13.1,13.1v-6.584L10.9,6.516ZM12,16.392a1.062,1.062 0,0 0,0.782 -0.315,1.062 1.062,0 0,0 0.315,-0.782 1.062,1.062 0,0 0,-0.315 -0.782,1.062 1.062,0 0,0 -0.782,-0.315 1.062,1.062 0,0 0,-0.782 0.315,1.062 1.062,0 0,0 -0.315,0.782 1.062,1.062 0,0 0,0.315 0.782A1.062,1.062 0,0 0,12 16.389Z" />
 </vector>
