--- a/resources-logic/src/main/res/drawable/ic_add.xml
+++ b/resources-logic/src/main/res/drawable/ic_add.xml
@@ -1,9 +1,27 @@
+<!--
+  ~ /*
+  ~  * Copyright (c) 2023 European Commission
+  ~  *
+  ~  * Licensed under the Apache License, Version 2.0 (the "License");
+  ~  * you may not use this file except in compliance with the License.
+  ~  * You may obtain a copy of the License at
+  ~  *
+  ~  *     http://www.apache.org/licenses/LICENSE-2.0
+  ~  *
+  ~  * Unless required by applicable law or agreed to in writing, software
+  ~  * distributed under the License is distributed on an "AS IS" BASIS,
+  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~  * See the License for the specific language governing permissions and
+  ~  * limitations under the License.
+  ~  */
+  -->
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="M19,13L13,13v6L11,19L11,13L5,13L5,11L11,11L11,5L13,5L13,11h6Z"
-      android:fillColor="#004494"/>
+    <path
+        android:fillColor="#004494"
+        android:pathData="M19,13L13,13v6L11,19L11,13L5,13L5,11L11,11L11,5L13,5L13,11h6Z" />
 </vector>
