Added reusable components for issuance button and details screen

--- a/resources-logic/src/main/res/drawable/ic_id_stroke.xml
+++ b/resources-logic/src/main/res/drawable/ic_id_stroke.xml
@@ -1,4 +1,4 @@
-<!--
+    <!--
   ~ /*
   ~  * Copyright (c) 2023 European Commission
   ~  *
@@ -27,10 +27,11 @@
         android:strokeWidth="4"
         android:strokeColor="#00000000" />
     <path
-        android:fillColor="#00000000"
+        android:fillColor="#FFFFFF"
+        android:fillAlpha="0"
         android:pathData="M18,8L78,8A10,10 0,0 1,88 18L88,54A10,10 0,0 1,78 64L18,64A10,10 0,0 1,8 54L8,18A10,10 0,0 1,18 8z"
         android:strokeWidth="4"
-        android:strokeColor="#000000" />
+        android:strokeColor="#99FFFFFF" />
     <path
         android:fillColor="#004494"
         android:pathData="M10,17.429L86,17.429A7.391,7.391 0,0 0,78.66 10L17.34,10A7.391,7.391 0,0 0,10 17.429ZM10,21.143L10,54.571A7.391,7.391 0,0 0,17.34 62L78.66,62A7.391,7.391 0,0 0,86 54.571L86,21.143ZM17.34,53.329a6.148,6.148 0,0 1,6.112 -6.187L36.916,47.142a6.148,6.148 0,0 1,6.112 6.187A1.236,1.236 0,0 1,41.8 54.571L18.567,54.571A1.236,1.236 0,0 1,17.34 53.329ZM30.184,28.571A7.429,7.429 0,1 1,22.844 36,7.384 7.384,0 0,1 30.184,28.571ZM52.854,30.428a1.852,1.852 0,0 1,1.835 -1.857L76.826,28.571a1.857,1.857 0,0 1,0 3.714L54.688,32.285A1.852,1.852 0,0 1,52.854 30.429ZM52.854,37.857A1.852,1.852 0,0 1,54.688 36L76.826,36a1.857,1.857 0,0 1,0 3.714L54.688,39.714A1.852,1.852 0,0 1,52.854 37.857ZM52.854,45.286a1.852,1.852 0,0 1,1.835 -1.857L76.826,43.429a1.857,1.857 0,0 1,0 3.714L54.688,47.143A1.852,1.852 0,0 1,52.854 45.286Z" />
