--- a/resources-logic/src/main/res/drawable/ic_add.xml
+++ b/resources-logic/src/main/res/drawable/ic_add.xml
@@ -20,6 +20,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#004494"
+        android:fillColor="#2a5ed9"
         android:pathData="M19,13L13,13v6L11,19L11,13L5,13L5,11L11,11L11,5L13,5L13,11h6Z" />
 </vector>
