Refactor: Adds new Icons and reusable components.
- Added WrapChip, WrapSearchBar, ListItem, WrapListItem and ExpandableListItem.
- Redesigned existing components like WrapButton, WrapCard, WrapExpandableCard, WrapModalBottomSheet and WrapTextField.

--- a/resources-logic/src/main/res/drawable/ic_certified.xml
+++ b/resources-logic/src/main/res/drawable/ic_certified.xml
@@ -20,6 +20,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#F39626"
-        android:pathData="M1,21.5H23L12,2.5L1,21.5ZM13,18.5H11V16.5H13V18.5ZM13,14.5H11V10.5H13V14.5Z" />
+        android:fillColor="#55953B"
+        android:pathData="M12,2L4,5V11.09C4,16.14 7.41,20.85 12,22C16.59,20.85 20,16.14 20,11.09V5L12,2ZM18,11.09C18,15.09 15.45,18.79 12,19.92C8.55,18.79 6,15.1 6,11.09V6.31L12,4.19L18,6.31V11.09ZM8.82,10.59L7.4,12L10.94,15.54L16.6,9.88L15.19,8.47L10.95,12.71L8.82,10.59Z" />
 </vector>
