--- a/resources-logic/src/main/res/drawable/ic_notifications.xml
+++ b/resources-logic/src/main/res/drawable/ic_notifications.xml
@@ -15,14 +15,14 @@
   -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp" 
+    android:width="40dp"
     android:height="40dp"
     android:viewportWidth="40"
     android:viewportHeight="40">
     <group>
         <clip-path android:pathData="M20,0L20,0A20,20 0,0 1,40 20L40,20A20,20 0,0 1,20 40L20,40A20,20 0,0 1,0 20L0,20A20,20 0,0 1,20 0z" />
         <path
-            android:fillColor="#1D1B20"
-            android:pathData="M27,21H21V27H19V21H13V19H19V13H21V19H27V21Z" />
+            android:fillColor="#2A5FD9"
+            android:pathData="M15.58,11.83L14.15,10.4C11.75,12.23 10.17,15.05 10.03,18.25H12.03C12.18,15.6 13.54,13.28 15.58,11.83ZM27.97,18.25H29.97C29.82,15.05 28.24,12.23 25.85,10.4L24.43,11.83C26.45,13.28 27.82,15.6 27.97,18.25ZM26,18.75C26,15.68 24.36,13.11 21.5,12.43V11.75C21.5,10.92 20.83,10.25 20,10.25C19.17,10.25 18.5,10.92 18.5,11.75V12.43C15.63,13.11 14,15.67 14,18.75V23.75L12,25.75V26.75H28V25.75L26,23.75V18.75ZM20,29.75C20.14,29.75 20.27,29.74 20.4,29.71C21.05,29.57 21.58,29.13 21.84,28.53C21.94,28.29 21.99,28.03 21.99,27.75H17.99C18,28.85 18.89,29.75 20,29.75Z" />
     </group>
 </vector>
