--- a/resources-logic/src/main/res/drawable/ic_verified.xml
+++ b/resources-logic/src/main/res/drawable/ic_verified.xml
@@ -20,6 +20,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#2a5ed9"
-        android:pathData="M23,12 L20.56,9.21l0.34,-3.69L17.29,4.7 15.4,1.5 12,2.96 8.6,1.5 6.71,4.69 3.1,5.5l0.34,3.7L1,12l2.44,2.79 -0.34,3.7 3.61,0.82L8.6,22.5 12,21.03l3.4,1.46 1.89,-3.19 3.61,-0.82 -0.34,-3.69ZM10.09,16.72l-3.8,-3.81 1.48,-1.48 2.32,2.33 5.85,-5.87 1.48,1.48Z" />
+        android:fillColor="#55953B"
+        android:pathData="M23,12L20.56,9.21L20.9,5.52L17.29,4.7L15.4,1.5L12,2.96L8.6,1.5L6.71,4.69L3.1,5.5L3.44,9.2L1,12L3.44,14.79L3.1,18.49L6.71,19.31L8.6,22.5L12,21.03L15.4,22.49L17.29,19.3L20.9,18.48L20.56,14.79L23,12ZM10.09,16.72L6.29,12.91L7.77,11.43L10.09,13.76L15.94,7.89L17.42,9.37L10.09,16.72Z" />
 </vector>
