--- a/resources-logic/src/main/res/drawable/ic_bookmark.xml
+++ b/resources-logic/src/main/res/drawable/ic_bookmark.xml
@@ -15,11 +15,14 @@
   -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="#F39626"
-        android:pathData="M1,21.5H23L12,2.5L1,21.5ZM13,18.5H11V16.5H13V18.5ZM13,14.5H11V10.5H13V14.5Z" />
+    android:width="40dp"
+    android:height="40dp"
+    android:viewportWidth="40"
+    android:viewportHeight="40">
+    <group>
+        <clip-path android:pathData="M20,0L20,0A20,20 0,0 1,40 20L40,20A20,20 0,0 1,20 40L20,40A20,20 0,0 1,0 20L0,20A20,20 0,0 1,20 0z" />
+        <path
+            android:fillColor="#49454F"
+            android:pathData="M25,11H15C13.9,11 13,11.9 13,13V29L20,26L27,29V13C27,11.9 26.1,11 25,11ZM25,26L20,23.82L15,26V13H25V26Z" />
+    </group>
 </vector>
