--- a/resources-logic/src/main/res/drawable/ic_bookmark_filled.xml
+++ b/resources-logic/src/main/res/drawable/ic_bookmark_filled.xml
@@ -21,5 +21,5 @@
     android:viewportHeight="24">
     <path
         android:fillColor="#F39626"
-        android:pathData="M1,21.5H23L12,2.5L1,21.5ZM13,18.5H11V16.5H13V18.5ZM13,14.5H11V10.5H13V14.5Z" />
+        android:pathData="M5,21V5C5,4.45 5.196,3.979 5.588,3.588C5.979,3.196 6.45,3 7,3H17C17.55,3 18.021,3.196 18.413,3.588C18.804,3.979 19,4.45 19,5V21L12,18L5,21Z" />
 </vector>
