--- a/resources-logic/src/main/res/drawable/ic_documents.xml
+++ b/resources-logic/src/main/res/drawable/ic_documents.xml
@@ -20,6 +20,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#F39626"
-        android:pathData="M1,21.5H23L12,2.5L1,21.5ZM13,18.5H11V16.5H13V18.5ZM13,14.5H11V10.5H13V14.5Z" />
+        android:fillColor="#49454F"
+        android:pathData="M14.17,5L19,9.83V19H5V5H14.17ZM14.17,3H5C3.9,3 3,3.9 3,5V19C3,20.1 3.9,21 5,21H19C20.1,21 21,20.1 21,19V9.83C21,9.3 20.79,8.79 20.41,8.42L15.58,3.59C15.21,3.21 14.7,3 14.17,3ZM7,15H17V17H7V15ZM7,11H17V13H7V11ZM7,7H14V9H7V7Z" />
 </vector>
