--- a/resources-logic/src/main/res/drawable/ic_filters.xml
+++ b/resources-logic/src/main/res/drawable/ic_filters.xml
@@ -15,14 +15,14 @@
   -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp" 
+    android:width="40dp"
     android:height="40dp"
     android:viewportWidth="40"
     android:viewportHeight="40">
     <group>
         <clip-path android:pathData="M20,0L20,0A20,20 0,0 1,40 20L40,20A20,20 0,0 1,20 40L20,40A20,20 0,0 1,0 20L0,20A20,20 0,0 1,20 0z" />
         <path
-            android:fillColor="#1D1B20"
-            android:pathData="M27,21H21V27H19V21H13V19H19V13H21V19H27V21Z" />
+            android:fillColor="#49454F"
+            android:pathData="M11,26C11,26.55 11.45,27 12,27H17V25H12C11.45,25 11,25.45 11,26ZM11,14C11,14.55 11.45,15 12,15H21V13H12C11.45,13 11,13.45 11,14ZM21,28V27H28C28.55,27 29,26.55 29,26C29,25.45 28.55,25 28,25H21V24C21,23.45 20.55,23 20,23C19.45,23 19,23.45 19,24V28C19,28.55 19.45,29 20,29C20.55,29 21,28.55 21,28ZM15,18V19H12C11.45,19 11,19.45 11,20C11,20.55 11.45,21 12,21H15V22C15,22.55 15.45,23 16,23C16.55,23 17,22.55 17,22V18C17,17.45 16.55,17 16,17C15.45,17 15,17.45 15,18ZM29,20C29,19.45 28.55,19 28,19H19V21H28C28.55,21 29,20.55 29,20ZM24,17C24.55,17 25,16.55 25,16V15H28C28.55,15 29,14.55 29,14C29,13.45 28.55,13 28,13H25V12C25,11.45 24.55,11 24,11C23.45,11 23,11.45 23,12V16C23,16.55 23.45,17 24,17Z" />
     </group>
 </vector>
