--- a/resources-logic/src/main/res/drawable/ic_transactions.xml
+++ b/resources-logic/src/main/res/drawable/ic_transactions.xml
@@ -15,11 +15,14 @@
   -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
+    android:width="25dp"
     android:height="24dp"
-    android:viewportWidth="24"
+    android:viewportWidth="25"
     android:viewportHeight="24">
     <path
-        android:fillColor="#F39626"
-        android:pathData="M1,21.5H23L12,2.5L1,21.5ZM13,18.5H11V16.5H13V18.5ZM13,14.5H11V10.5H13V14.5Z" />
+        android:fillColor="#49454F"
+        android:pathData="M7.743,13.41L6.333,12L2.333,16L6.333,20L7.743,18.59L6.163,17H21.333V15H6.163L7.743,13.41Z" />
+    <path
+        android:fillColor="#49454F"
+        android:pathData="M16.923,10.59L18.333,12L22.333,8L18.333,4L16.923,5.41L18.503,7H3.333V9H18.503L16.923,10.59Z" />
 </vector>
