--- a/resources-logic/src/main/res/drawable/ic_visibility_on.xml
+++ b/resources-logic/src/main/res/drawable/ic_visibility_on.xml
@@ -15,11 +15,11 @@
   -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="40dp"
+    android:height="40dp"
+    android:viewportWidth="40"
+    android:viewportHeight="40">
     <path
-        android:fillColor="#2a5ed9"
-        android:pathData="M12,5A11.827,11.827 0,0 0,1 12.5a11.817,11.817 0,0 0,22 0A11.827,11.827 0,0 0,12 5ZM12,17.5a5,5 0,1 1,5 -5A5,5 0,0 1,12 17.5ZM12,9.5a3,3 0,1 0,3 3A3,3 0,0 0,12 9.5Z" />
+        android:fillColor="#49454F"
+        android:pathData="M20,14.5C23.79,14.5 27.17,16.63 28.82,20C27.17,23.37 23.79,25.5 20,25.5C16.21,25.5 12.83,23.37 11.18,20C12.83,16.63 16.21,14.5 20,14.5ZM20,12.5C15,12.5 10.73,15.61 9,20C10.73,24.39 15,27.5 20,27.5C25,27.5 29.27,24.39 31,20C29.27,15.61 25,12.5 20,12.5ZM20,17.5C21.38,17.5 22.5,18.62 22.5,20C22.5,21.38 21.38,22.5 20,22.5C18.62,22.5 17.5,21.38 17.5,20C17.5,18.62 18.62,17.5 20,17.5ZM20,15.5C17.52,15.5 15.5,17.52 15.5,20C15.5,22.48 17.52,24.5 20,24.5C22.48,24.5 24.5,22.48 24.5,20C24.5,17.52 22.48,15.5 20,15.5Z" />
 </vector>
