--- a/resources-logic/src/main/res/drawable/ic_menu.xml
+++ b/resources-logic/src/main/res/drawable/ic_menu.xml
@@ -19,7 +19,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="M3,18V16H21V18H3ZM3,13V11H21V13H3ZM3,8V6H21V8H3Z"
-      android:fillColor="#1D1B20"/>
+    <path
+        android:fillColor="#1D1B20"
+        android:pathData="M3,18V16H21V18H3ZM3,13V11H21V13H3ZM3,8V6H21V8H3Z" />
 </vector>
